<resources>
    <string name="app_name">TSAP</string>
    <string name="login">L O G I N</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="don_t_have_account_signup_here"> ------Or Connect With------</string>
    <string name="sign_up">SIGN UP</string>
    <string name="agree_terms_and_conditions">Agree Terms and Conditions</string>
    <string name="confirmPassword">CONFIRM PASSWORD</string>
    <string name="entered_Dangerous_area">Entered Dangerous area</string>
    <string name="move_within_Dangerous_area">Move Within Dangerous area</string>
    <string name="Leaved_Dangerous_area">Leaved Dangerous area</string>
    <string name="facebook_app_id">364465938286957</string>
    <string name="fb_login_protocol_scheme">fb364465938286957</string>

    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="contact_1">CONTACT 1</string>
    <string name="contact_2">CONTACT 2</string>
    <string name="contact_3">CONTACT 3</string>
    <string name="age">AGE</string>
    <string name="address1">ADDRESS1</string>
    <string name="place">PLACE</string>
    <string name="country">COUNTRY</string>
    <string name="complaint">COMPLAINT</string>
    <string name="address2">ADDRESS2</string>
    <string name="light">Light</string>
    <string name="availability_of_enough_light_to_see_around_you">Availability of enough light to see around you</string>
    <string name="little">Little</string>
    <string name="none">None</string>
    <string name="enough">Enough</string>
    <string name="bright">Bright</string>
    <string name="visibility">Visibility</string>
    <string name="vendors_shops_building_entrances_window_and_balconies_from_where_you_can_be_seen">Vendors,Shops,Building Entrances ,Window and Balconies from where you can be seen</string>
    <string name="no_eyes">No Eyes</string>
    <string name="few_eyes">Few Eyes</string>
    <string name="more_eyes">More Eyes</string>
    <string name="highly_visible">Highly Visible</string>
    <string name="transport">Transport</string>
    <string name="availability_of_public_transport_like_metro_buses_autos_richshaws">Availability of public transport like metro,buses,autos,richshaws</string>
    <string name="unavailable">Unavailable</string>
    <string name="distant">Distant</string>
    <string name="nearby">Nearby</string>
    <string name="very_close">Very Close</string>
    <string name="security">Security</string>
    <string name="presence_of_police_or_security_guards_around_you">Presence of Police or Security guards around you</string>
    <string name="minimal">Minimal</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="people">People</string>
    <string name="deserted">Deserted</string>
    <string name="few_people">Few People</string>
    <string name="some_crowd">Some Crowd</string>
    <string name="crowded">Crowded</string>
    <string name="gender_usage">Gender Usage</string>
    <string name="presence_of_women_and_children_around_you">Presence of women and children around you</string>
    <string name="not_diverse">Not Diverse</string>
    <string name="somewhat_diverse">Somewhat Diverse</string>
    <string name="fairly_diverse">Fairly Diverse</string>
    <string name="diverse">Diverse</string>
    <string name="feeling">Feeling</string>
    <string name="how_safe_do_you_feel_in_your_location_or_area">How safe do you feel in your location or area</string>
    <string name="frightening">Frightening</string>
    <string name="uncomfortable">Uncomfortable</string>
    <string name="acceptable">Acceptable</string>
    <string name="comfortable">Comfortable</string>
    <string name="name">NAME</string>
    <string name="gender">GENDER</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="pin">PIN CODE</string>
    <string name="email">EMAIL</string>
    <string name="title">TITLE</string>
    <string name="s_u_b_m_i_t">S U B M I T</string>
    <string name="user_name">Lucifer</string>
    <string name="email_">Lucifer.Morningstar@hell.com</string>
    <string name="user_photo">user_photo</string>
    <string name="do_a_safety_audit">Do a Safety Audit</string>
    <string name="sos">SOS</string>
    <string name="pre_fir_D">PRE - FIR</string>
    <string name="navigation_drawer_open" translatable="false">Open Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Drawer</string>
    <string name="todo">TODO</string>
    <string name="Safety_Measures">Safety Measures</string>
    <string name="Continue">CONTINUE</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_verification_code">ENTER VERIFICATION CODE</string>
    <string name="enter_phone_number">ENTER PHONE NUMBER</string>
    <string name="enter_code">Enter code</string>
    <string name="don_t_have_account_sign_up_here">Don\'t have account ? Sign up here</string>
    <string name="ravinder_singh">Ravinder Singh</string>
    <string name="sign_out">Sign Out</string>
    <string name="share">Share</string>
    <string name="or_sign_in">Or Sign In</string>
    <string name="already_registered_sign_in_here">Already registered? Sign in here</string>
    <string name="user_tsap_com">user@tsap.com</string>
    <string name="user">User</string>

</resources>