<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audit"
            android:icon="@drawable/ic_audit"
            android:title="@string/do_a_safety_audit"
            />
        <item
            android:id="@+id/nav_measures"
            android:icon="@drawable/ic_measures"
            android:title="@string/Safety_Measures" />
        <item
            android:id="@+id/nav_sos"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/sos" />
        <item
            android:id="@+id/pre_fir"
            android:icon="@drawable/ic_pre_fir"
            android:title="@string/pre_fir_D" />

    </group>

    <group android:id="@+id/Share"
        android:checkableBehavior="single">
        <item
            android:id="@+id/share"
            android:icon="@drawable/share"
            android:title="@string/share"
            android:checked="true"/>

    </group>
    <group android:id="@+id/sign_out_button"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/signout"
            android:title="@string/sign_out"
            />

    </group>

</menu>