<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="5dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userimage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/todo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:civ_border_color="@color/colorPrimary1"
        app:civ_border_width="2dp"
         />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee_italic"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/user_tsap_com"
        android:textSize="20sp" />


</LinearLayout>